--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ node_modules/
 .env.local
 .env.*.local
 
+# Allow example env files for documentation
+!.env.example
+!.env.production
+
 # Logs
 npm-debug.log*
 yarn-debug.log*
