--- a/cipherstudio-backend/package.json
+++ b/cipherstudio-backend/package.json
@@ -14,9 +14,13 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.0",
     "bcryptjs": "^2.4.3",
-    "aws-sdk": "^2.1300.0"
+    "aws-sdk": "^2.1300.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
